--- a/README.html
+++ b/README.html
@@ -195,7 +195,7 @@ $(document).ready(function () {
 <div id="marginalia" class="section level1">
 <h1>marginalia</h1>
 <p>The goal of this project is to assist in locating text within a literary corpus that was influenced by the author’s reading of external texts, which we refer to as source passages. The literary corpus being used for developement comes from the writing of Herman Melville (specifically, the project Gutenberg text of <em>Moby Dick</em>) and his readings of source passages come from the Melville <a href="http://melvillesmarginalia.org/">Marginalia project</a>.</p>
-<p>The approach being taken is to search through the literary corpus looking for key terms, their stems, and their synomyms taken from the source passages. After identifying them in the corpus, score the identified text based on the number of hits and the distances amonng the hits to produce a value that indicates the likelihood of a connection existing between the corpus and the source passages.</p>
+<p>The approach being taken is to search through the literary corpus looking for key terms, their stems, and their synomyms taken from the source passages. After identifying them in the corpus, the program outputs a score for identified text based on the number of hits and the distances among the hits to produce a value that indicates the likelihood of a connection existing between the corpus and the source passages.</p>
 </div>
 
 
